--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+} /*쿼리 dsl 추가 설정 : p.448*/
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.7'
@@ -35,6 +41,12 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'                              /* 롬북 */
     testAnnotationProcessor 'org.projectlombok:lombok'                      /* 롬북 */
 
+    /*DTO와 엔티티간에 변환 처리용 p.460*/
+    // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
+    implementation 'org.modelmapper:modelmapper:3.1.0'
+    /*과거에는 엔티티를 DTO로 변환 또는 DTO를 엔티티로 변환 해야 사용 가능함*/
+    /*프로젝트에 config라는 환경설정용 패키지를 만들고 RootConfih 클래스를 만들어 사용한다.*/
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'         /* boot 개발용 */
 
     /* 1단계 2단계 설정 -> src/main/resources/application.properties 에서 설정함 */
@@ -43,8 +55,37 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'  /* 테스트 junit 메서드 단위 테스트 */
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'            /* junit용 코드 */
+
+    /*쿼리 dsl 문구 추가 p.448 (6개 행 추가)*/
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
+    annotationProcessor(
+            "jakarta.persistence:jakarta.persistence-api",
+            "jakarta.annotation:jakarta.annotation-api",
+            "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+/*쿼리 dsl 문구 추가 ㅔ.448 (8개 행 추가)*/
+sourceSets {
+
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+        }
+    }
+}
+/*쿼리 dsl사용법 -> 오른쪽에 있는 Gradle메뉴를 열고 other를 찾아서 conplieJava task 실행*/
+/*하단에 complie가 된다.
+-> 왼쪽 탐색기 -> build -> generated -> main -> domain -> Q로 시작하는 클래스
+쿼리 dsl용 객체로 우리가 커스텀 하면 안됨
+*주의사항*
+Entity나 dto를 건들면 Q도메인을 다시 생성해야 한다.
+삭제 방법 : 오른쪽 Gradle메뉴 -> Tasks -> build -> clean 후 재생성
+*/
+
+compileJava.dependsOn('clean')
